# openai-proxy-ha

./: .gitignore  CHANGELOG.md  COPY_TO_HA.md  DEPLOYMENT.md  INSTALLATION_FIX.md  INSTALL_DEPENDENCIES.md  LICENSE  PROJECT_STATUS.md  QUICKFIX.md  README.md  STRUCTURE.md  SUMMARY.txt  VERSION_COMPATIBILITY.md  hacs.json  info.md  pyproject.toml  pytest.ini  requirements.txt
app/: main.py  main_v2.py
app/agents/: __init__.py  base.py  realtime_voice_agent.py
app/api/: routes.py  schemas.py
app/core/: rate_limiter.py
app/integrations/: telegram_bot.py
app/services/: command_processor.py
app/services/memory_v2/: embeddings.py  long_term.py  short_term.py
app/services/pipeline/: executor.py  intent_analyzer.py  planner.py  response_composer.py
app/services/search/: policies.py
app/services/tts/: openai_tts.py
custom_components/openai_voice_proxy/: __init__.py  config_flow.py  const.py  conversation.py  fastapi_manager.py  manifest.json  sensor.py  services.yaml  strings.json
custom_components/openai_voice_proxy/app/: __init__.py  main_v2.py
custom_components/openai_voice_proxy/app/agents/: text_agent.py
custom_components/openai_voice_proxy/app/api/: routes_v2.py
custom_components/openai_voice_proxy/app/core/: __init__.py  config.py  database.py  logging.py
custom_components/openai_voice_proxy/translations/: en.json  ru.json
migrations/: add_memory_v2_fields.sql
scripts/: migrate_db.py
tests/: __init__.py  conftest.py  test_memory_policies.py  test_pipeline.py  test_search_policies.py  test_tts.py
(+20 files in other folders)
